<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Encrypted SMS Backup</string>
    <string name="backup">Start Backup</string>
    <string name="out_message_contact_name">Me: </string>
    <string name="press_button_to_start">Press Start Backup button to start</string>
    <string name="start_backup">Backup in process, please wait…</string>
    <string name="backup_completed">Backup completed!\nOutput path is:\n %1$s</string>
    <string name="encrypt_my_sms_files">Encrypt my SMS files</string>
    <string name="encryption_key_">Encryption Key:</string>
    <string name="encryption_key_2">Encryption Key (Repeat):</string>
    <string name="key_mismatch">Error: Key Mismatch! Make sure both keys are the same</string>
    <string name="empty_key">Error: Key can\'t be empty.</string>
    <string name="encrypt">Encrypt</string>
    <string name="zip_all">Zip them all</string>
    <color android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/color1" name="white">#FFFFFF</color>
</resources>
