<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:scrollbars="vertical" >
       <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout 
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/zipFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight ="15dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/zip_all" />

    <Switch
        android:id="@+id/encryptCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight ="15dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/encrypt" />

    <TextView
        android:id="@+id/encryptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encryption_key_"
        android:visibility="gone" />
    

    <EditText
        android:id="@+id/encryptionKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/encryptionLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encryption_key_2"
        android:visibility="gone" />
        
    <EditText
        android:id="@+id/encryptionKey2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:inputType="textPassword" 
        android:visibility="gone"/>

    <Button
        android:id="@+id/backup_sms_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/backup" />

    <TextView
        android:id="@+id/back_up_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_button_to_start"
        android:textSize="15sp" />

       </LinearLayout>
      </ScrollView>
</LinearLayout>